# bidict

./: dict.opam  dune-project
src/: dict.ml  dict.mli  dune  io.mli
src/unix/: dict_unix.ml  dict_unix.mli  dune
test/unix/: dune  main.ml
