opam-version: "2.0"
maintainer:   "Thomas Gazagnaire"
authors:      ["Thomas Gazagnaire" "Clement Pascutto"]
license:      "MIT"
homepage:     "https://github.com/CraigFe/dict"
bug-reports:  "https://github.com/CraigFe/dict/issues"
dev-repo:     "git+https://github.com/CraigFe/dict.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"   {>= "4.03.0"}
  "dune"    {build & >= "1.7.0"}
  "bloomf"
  "fmt"
  "logs"
  "alcotest" {with-test}
]
synopsis: "Dictionary compression for Ocaml"
